# MyCpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  env.cmake.example  environ.cmake
Cpp-Medium/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  env.cmake.example
Cpp-Medium/app/: CMakeLists.txt  app.cpp
Cpp-Medium/cmake/: CMakeLists.txt  ExportConfig.cmake.in  package_readme.md.in  project.h.in
Cpp-Medium/doc/: CMakeLists.txt  coding_conventions.md  mainpage.md
Cpp-Medium/lib/: CMakeLists.txt
Cpp-Medium/lib/Lib/: cpp  err.cpp  err.hpp  hpp  lib.cpp  lib.hpp
Cpp-Medium/test/: CMakeLists.txt  util.hpp
app/: CMakeLists.txt  app.cpp  my-statistics.cpp  myhttp-client.cpp  myhttp-server.cpp  po.hpp
cmake/: CMakeLists.txt  ExportConfig.cmake.in  InstallConfig.cmake.in  depend.cmake  deps.cmake  override_glob.cmake  project.h.in  test_setup_env.cmake  timestamp.cmake.in
doc/: CMakeLists.txt  coding_standards.md
lib/: CMakeLists.txt
lib/Common/: CFile64.cpp  CFile64.hpp  Timing.cpp  Timing.hpp  err.cpp  err.hpp
lib/Lib/: Timing.cpp  Timing.hpp  err.cpp  err.hpp  lib.hpp
lib/My/: CFile64.cpp  CFile64.hpp  Deffered.hpp  Globally.hpp  MoveOnly.hpp  MultiPooled.hpp  Pooled.cpp  Pooled.hpp  README.md  RaiiPtr.hpp  SpinMutex.cpp  SpinMutex.hpp  Standing.hpp  Timing.cpp  Timing.hpp  TmpOut.hpp  cpp  cpp.cpp  err.cpp  err.hpp  hpp  log.cpp  log.hpp  util.cpp  util.hpp
lib/MyHttp/: Client.cpp  Client.hpp  HttpHandler.cpp  HttpHandler.hpp  HttpHelloWorld.cpp  HttpHelloWorld.hpp  HttpInvoker.cpp  HttpInvoker.hpp  HttpMatpowsum.cpp  HttpMatpowsum.hpp  README.md  Server.cpp  Server.hpp  ServerBuilder.cpp  ServerBuilder.hpp  hpp  servers.cpp  servers.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  test.cpp  testutil.cpp  testutil.hpp  util.cpp  util.hpp
test/Common/: CMakeLists.txt  Timing.cpp
test/My/: CMakeLists.txt  Pooled.cpp  SpinMutex.cpp  Timing.cpp
test/MyHttp/: CMakeLists.txt  HelloWorld.cpp
